--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.4.1
   pretty_dio_logger: ^1.4.0
   fluttertoast: ^8.2.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -72,9 +73,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
+#    - assets/svgs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -87,17 +89,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+     - family: Montserrat
+       fonts:
+         - asset: assets/fonts/Montserrat-VariableFont_wght.ttf
+         - asset: assets/fonts/Montserrat-Bold.ttf
+         - asset: assets/fonts/Montserrat-Italic-VariableFont_wght.ttf
+         - asset: assets/fonts/Montserrat-Medium.ttf
+         - asset: assets/fonts/Montserrat-Regular.ttf
+         - asset: assets/fonts/Montserrat-SemiBold.ttf
+         - asset: assets/fonts/Montserrat-Light.ttf
+     - family: Inter
+       fonts:
+         - asset: assets/fonts/Inter-Italic-VariableFont_opsz,wght.ttf
+         - asset: assets/fonts/Inter-VariableFont_opsz,wght.ttf
+         - asset: assets/fonts/Inter-Regular.otf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
