general auth widgets + login form

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.4.1
   pretty_dio_logger: ^1.4.0
   fluttertoast: ^8.2.8
+  country_picker: ^2.0.27
 dev_dependencies:
   flutter_test:
     sdk: flutter
