--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   fluttertoast: ^8.2.8
   country_picker: ^2.0.27
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
