--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   fluttertoast: ^8.2.8
   country_picker: ^2.0.27
   flutter_rating_bar: ^4.0.1
+  skeletonizer: ^1.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
