--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   country_picker: ^2.0.27
   flutter_rating_bar: ^4.0.1
   skeletonizer: ^1.4.2
+  smart_stepper:
 dev_dependencies:
   flutter_test:
     sdk: flutter
