--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   skeletonizer: ^1.4.2
   smart_stepper:
+  photo_view: ^0.15.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
