--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   fluttertoast: ^8.2.8
   country_picker: ^2.0.27
   flutter_rating_bar: ^4.0.1
-  skeletonizer: ^1.4.2
+  shimmer: ^3.0.0
   smart_stepper:
   photo_view: ^0.15.0
 dev_dependencies:
