--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   dio: ^5.7.0
-  intl: ^0.20.1
+  intl: ^0.19.0
   rename: ^3.0.2
   flutter_native_splash: ^2.4.3
   flutter_bloc: ^8.1.6
@@ -54,6 +54,7 @@ dependencies:
   shimmer: ^3.0.0
   smart_stepper:
   photo_view: ^0.15.0
+  easy_localization: ^3.0.7+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,6 +83,7 @@ flutter:
     - assets/images/
     - assets/svgs/
     - assets/fonts/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
