--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,20 +33,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
   dio: ^5.7.0
-  intl: ^0.19.0
   rename: ^3.0.2
   flutter_native_splash: ^2.4.3
   flutter_bloc: ^8.1.6
   carousel_slider: ^5.0.0
   get_it: ^8.0.2
   shared_preferences: ^2.3.3
-  flutter_svg: ^2.0.16
-  google_fonts: ^6.2.1
+  flutter_svg: 2.0.9
   smooth_page_indicator: ^1.2.0+3
   percent_indicator: ^4.2.4
   pinput: ^5.0.0
   dartz: ^0.10.1
-  cached_network_image: ^3.4.1
+  cached_network_image: ^3.3.0
   pretty_dio_logger: ^1.4.0
   fluttertoast: ^8.2.8
   country_picker: ^2.0.27
@@ -54,7 +52,11 @@ dependencies:
   shimmer: ^3.0.0
   smart_stepper:
   photo_view: ^0.15.0
-  easy_localization: ^3.0.7+1
+  easy_localization: ^3.0.0
+  geideapay:
+    git:
+      url: https://github.com/GeideaSolutions/Flutter-SDK
+      ref: main
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,7 +67,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+dependency_overrides:
+  intl: ^0.19.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
