--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   photo_view: ^0.15.0
   easy_localization: ^3.0.0
   animated_custom_dropdown: ^3.1.1
+  chewie: ^1.11.3
+  video_player: ^2.9.5
   geideapay:
     git:
       url: https://github.com/GeideaSolutions/Flutter-SDK
