--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,11 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   chewie: ^1.11.3
   video_player: ^2.9.5
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  path_provider: ^2.1.5
+  open_file: ^3.5.10
+  permission_handler: ^12.0.0+1
   geideapay:
     git:
       url: https://github.com/GeideaSolutions/Flutter-SDK
