--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ dependencies:
   printing: ^5.14.2
   path_provider: ^2.1.5
   open_file: ^3.5.10
-  permission_handler: ^12.0.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   geideapay:
     git:
       url: https://github.com/GeideaSolutions/Flutter-SDK
@@ -68,7 +69,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
